// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Error equality > basic 1`] = `
{
  "actual": "[Error: hi]",
  "diff": "- Expected
+ Received

  Error {
    "message": "hi",
-   "custom": "b",
+   "custom": "a",
  }",
  "expected": "[Error: hi]",
  "message": "expected Error: hi { custom: 'a' } to deeply equal Error: hi { custom: 'b' }",
}
`;

exports[`Error equality > basic 2`] = `
{
  "actual": "[Error: hi]",
  "diff": "- Expected
+ Received

  Error {
-   "message": "hello",
+   "message": "hi",
    "custom": "a",
  }",
  "expected": "[Error: hello]",
  "message": "expected Error: hi { custom: 'a' } to deeply equal Error: hello { custom: 'a' }",
}
`;

exports[`Error equality > basic 3`] = `
{
  "actual": "[Error: hello]",
  "diff": "Compared values have no visual difference.",
  "expected": "[Error: hello]",
  "message": "expected Error: hello { custom: 'a' } to deeply equal Error: hello { custom: 'a' }",
}
`;

exports[`Error equality > basic 4`] = `
{
  "actual": "[Error: hello]",
  "diff": "- Expected
+ Received

  Error {
    "message": "hello",
-   "cause": "y",
+   "cause": "x",
  }",
  "expected": "[Error: hello]",
  "message": "expected Error: hello { cause: 'x' } to deeply equal Error: hello { cause: 'y' }",
}
`;

exports[`Error equality > basic 5`] = `
{
  "actual": "[Error: hello]",
  "diff": "- Expected
+ Received

  Error {
    "message": "hello",
-   "cause": "y",
  }",
  "expected": "[Error: hello]",
  "message": "expected Error: hello to deeply equal Error: hello { cause: 'y' }",
}
`;

exports[`Error equality > basic 6`] = `
{
  "actual": "[Error: hello]",
  "diff": "- Expected
+ Received

  Error {
-   "message": "world",
+   "message": "hello",
+   "cause": "x",
  }",
  "expected": "[Error: world]",
  "message": "expected Error: hello { cause: 'x' } to deeply equal Error: world",
}
`;
